syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "attendance_messages.proto";

option go_package = "./;pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Attendance API";
		version: "0.0.1";
	};
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  };
  security: {
    security_requirement: {
      key: "bearer"
    }
  };
};

service AttendanceService{
  rpc CreateAttendance (CreateAttendanceRequest) returns (CreateAttendanceResponse) {
    option (google.api.http) = {
      post: "/attendances"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new attendance";
      summary: "Create a new attendance";
    };
  };
  rpc UpdateAttendanceById (UpdateAttendanceByIdRequest) returns (UpdateAttendanceByIdResponse) {
    option (google.api.http) = {
      patch: "/attendances/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to update attendance by id";
      summary: "Update attendance by id";
    };
  };
  rpc DeleteAttendanceById (DeleteAttendanceByIdRequest) returns (DeleteAttendanceByIdResponse) {
    option (google.api.http) = {
      delete: "/attendances/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to delete attendance by id";
      summary: "Delete attendance by id";
    };
  };

  rpc FindAttendances (FindAttendancesRequest)returns (FindAttendancesResponse){
    option (google.api.http) = {
			get: "/attendances"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find attendances";
      summary: "Find Attendances";
    };
  }
  rpc FindAttendanceById (FindAttendanceByIdRequest) returns (FindAttendanceByIdResponse) {
    option (google.api.http) = {
			get: "/attendances/{id}"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find attendance by id";
      summary: "Find Attendance By Id";
    };
  };
}